--- a/react/package.json
+++ b/react/package.json
@@ -20,7 +20,9 @@
     "@vtex/tsconfig": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
     "graphql": "^14.6.0",
+    "itgloberspartnercl.custom-department-search": "https://fernandopachon--itgloberspartnercl.myvtex.com/_v/private/typings/linked/v1/itgloberspartnercl.custom-department-search@0.0.1+build1669344615/public/@types/itgloberspartnercl.custom-department-search",
     "prop-type": "^0.0.1",
+    "prop-types": "^15.8.1",
     "typescript": "3.9.7",
     "vtex.css-handles": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.css-handles@0.4.4/public/@types/vtex.css-handles",
     "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime",
