--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "custom-departament-search",
+  "name": "custom-department-search",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "lint": "eslint --ext js,jsx,ts,tsx .",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
-    "lint:locales": "intl-equalizer",
-    "test": "cd ./react && yarn test"
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\""
   },
   "lint-staged": {
     "*.{ts,js,tsx,jsx}": [
@@ -15,29 +13,16 @@
     ],
     "*.{json,graphql,gql}": [
       "prettier --write"
-    ],
-    "*.json": [
-      "prettier --write"
-    ],
-    "messages/*.json": [
-      "yarn lint:locales"
     ]
   },
   "devDependencies": {
-    "@vtex/intl-equalizer": "^2.5.0",
-    "@vtex/prettier-config": "^0.3.5",
-    "eslint": "^7.14.0",
-    "eslint-config-vtex": "^12.8.11",
-    "eslint-config-vtex-react": "^6.8.3",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.2.0",
-    "typescript": "^3.9.6",
-    "@vtex/danger": "^0.2.7"
-  },
-  "version": "0.0.1",
-  "intl-equalizer": {
-    "referenceLocale": "en",
-    "localeDirectory": "messages"
+    "@vtex/prettier-config": "0.1.4",
+    "eslint": "7.12.1",
+    "eslint-config-vtex": "12.3.2",
+    "eslint-config-vtex-react": "6.3.2",
+    "husky": "4.2.3",
+    "lint-staged": "10.1.1",
+    "prettier": "2.0.2",
+    "typescript": "3.8.3"
   }
 }
